# Robo-Selenium

./: README.md  pyproject.toml  requirements.txt  robo.py  setup.cfg  setup.py
robo/: __init__.py
robo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/robo.egg-info/: PKG-INFO  SOURCES.txt
src/robo_selenium.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
