[metadata]
name = robo
version = 1.0.0
author = Arfel
description = A auxiliary package for the selenium package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
project_urls =
    Docs = https://docs.example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src